part1/1.11/manifests/log-output/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      nodeSelector:
        project: pingpong-log
      volumes:
        - name: shared-logs
          persistentVolumeClaim:
            claimName: shared-pvc
      containers:
        - name: writer
          image: pedrocoelhodr/log-output:writer-1.1
          volumeMounts:
            - name: shared-logs
              mountPath: /usr/src/app/data
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
        - name: reader
          image: pedrocoelhodr/log-output:reader-1.2
          volumeMounts:
            - name: shared-logs
              mountPath: /usr/src/app/data
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
