part1/1.11/manifests/log-output/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: log-output-ingress
spec:
  ingressClassName: traefik  # Updated field
  rules:
  - http:
      paths:
      - path: /log
        pathType: Prefix
        backend:
          service:
            name: log-output-svc
            port:
              number: 2345
